--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "deploy": "gh-pages -b build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.40.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
